--- a/style.css
+++ b/style.css
@@ -60,3 +60,27 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.footer {
+    height: 10vh;
+}
+
+.copyright {
+    padding: 20px;
+}
+
+.navbar {
+    background-color: springgreen;
+    position: fixed;
+    width: 100vw;
+}
+
+ul {
+    margin: 0;
+    display: flex;
+    list-style-type: none;
+}
+
+li {
+    padding: 20px;
+}
